# Saul-Python

./: .gitignore  .pre-commit-config.yaml  AI.md  AI_ENGINE_TESTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  Makefile  README.md  main.py  principal.py  pyproject.toml  requirements.txt
config/: logging_config.py
src/task_manager/: __init__.py  ai_engine.py  cli.py  exceptions.py  models.py
tests/: test_ai_engine.py  test_task_manager.py
