[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager"
version = "2.1.0"
description = "Sistema profesional de gestión de tareas con SOLID y Clean Code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Saul", email = "your.email@example.com"}
]
requires-python = ">=3.9"
keywords = ["tasks", "todo", "cli", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Spanish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/task-manager"
Repository = "https://github.com/yourusername/task-manager.git"
Issues = "https://github.com/yourusername/task-manager/issues"

[project.scripts]
task-manager = "task_manager.main:main"

[tool.setuptools]
packages = ["task_manager", "config"]

[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 99
skip_gitignore = true
known_first_party = ["task_manager", "config"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/task_manager --cov-report=html --cov-report=term"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/task_manager"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
